Fix collapsing inputs and overflow on screens with small height

--- a/style.css
+++ b/style.css
@@ -139,16 +139,18 @@ body::before {
   top: 50%;
   transform: translate(-50%, -50%);
   border-radius: 1.25rem;
-  padding-inline: 2rem;
-  padding-block: 1rem;
+  padding-inline: min(2rem, 10% - 1rem);
+  padding-block: min(1rem, 5%);
   display: flex; 
   flex-direction: column;
   align-content: center;
+  overflow: auto;
 }
 
 .full-width {
   width: 100%;  
-  height: 35px;
+  height: 34px;
+  min-height: 34px;
   margin-block: 0.25rem;
   border-radius: 0.5rem;
 }
@@ -181,12 +183,12 @@ body::before {
 }
 
 .nav > .back {
-  width: 35%;
+  width: 30%;
   margin-top: auto;
 }
 
 .nav > .next {
-  width: 35%;
+  width: 30%;
   margin-left: auto;
   margin-top: auto;
   display: inline-block;
@@ -226,16 +228,16 @@ body::before {
 .right > div > label {
   font-size: 0.8rem;
   font-weight: bold;
-  margin-top: 0.6rem;
+  margin-top: 0.25rem;
 }
 
 .right > div > #or { 
   text-align: center;
   font-size: 1.25rem;
-  height: fit-content;
+  align-content: center;
 }
 
-#v1, #v2 {
+#v3, #v2 {
   display: none;
 }
 
